@@ -720,6 +720,9 @@ void nsh_usbtrace(void);
 #  ifndef CONFIG_NSH_DISABLE_MKDIR
       int cmd_mkdir(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
 #  endif
+#  ifndef CONFIG_NSH_DISABLE_MV
+      int cmd_mv(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
+#  endif
 #  ifndef CONFIG_NSH_DISABLE_RMDIR
       int cmd_rmdir(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
 #  endif
@@ -751,9 +754,6 @@ void nsh_usbtrace(void);
 #     ifdef CONFIG_FS_WRITABLE
 #       ifndef CONFIG_NSH_DISABLE_MKRD
            int cmd_mkrd(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
-#       endif
-#       ifndef CONFIG_NSH_DISABLE_MV
-           int cmd_mv(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
 #       endif
 #       ifndef CONFIG_NSH_DISABLE_RM
            int cmd_rm(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
