@@ -300,7 +300,7 @@ static const struct cmdmap_s g_cmdmap[] =
 # endif
 #endif
 
-#if !defined(CONFIG_DISABLE_MOUNTPOINT) && CONFIG_NFILE_DESCRIPTORS > 0 && defined(CONFIG_FS_WRITABLE)
+#if CONFIG_NFILE_DESCRIPTORS > 0
 #  ifndef CONFIG_NSH_DISABLE_MV
   { "mv",       cmd_mv,       3, 3, "<old-path> <new-path>" },
 #  endif
